--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Blasting Off With Bootstrap</title>
 
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" media="all" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400" rel="stylesheet">
     <link href="css/main.css" media="all" rel="stylesheet" />
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -21,10 +21,10 @@
 <body>
     <header>
         <nav>
-            <div class="navbar navbar-inverse navbar-static-top">
+            <div class="navbar navbar-static-top">
                 <div class="container">
                     <div class="navbar-header">
-                        <a href="index.html" class="navbar-brand">Blasting Off With Bootstrap</a>
+                        <a href="index.html" class="navbar-brand">Intergalactic Travel</a>
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                            <span class="sr-only">Toggle Navigation</span>
                             <span class="icon-bar"></span>
@@ -63,7 +63,7 @@
                 <div class="col-md-6 visible-md visible-lg">
                     <img src="img/img-header.jpg"></div>
             </div>
-            <div class="row text-center">
+            <div class="row text-center featured">
                 <div class="col-sm-12 col-md-4">
                     <i class="glyphicon glyphicon-briefcase"></i>
                     <h2>Book Today!</h2>
@@ -84,7 +84,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-xs-offset-1 col-sm-offset-0 col-xs-8 col-sm-4 text-left">
@@ -121,7 +121,7 @@
                         <li><a href="mailto:mails4ipiyush@gmail.com"><i class="glyphicon glyphicon-envelope"></i> piyush@gmail.com</a></li>
                         <li></li>
                     </ul>
-                    <p>Blasting off with Bootstrap&copy;2216</p>
+                    <p>Intergalactic Travel &copy; 2216</p>
                 </div>
             </div>
         </div>
