add font awesome and blogpost.html

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,9 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Intergalactic Travel</title>
+    <title>Blasting Off With Bootstrap</title>
 
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" media="all" rel="stylesheet" />
+    <link href="bower_components/font-awesome/css/font-awesome.min.css" media="all" rel="stylesheet" />
+
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400" rel="stylesheet">
     <link href="css/main.css" media="all" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -40,7 +42,7 @@
                                 <li><a href="#">Our Story</a></li>
                                 <li><a href="#">Contact Us</a></li>
                                 <li class="divider"></li>
-                                <li><a href="blogpost.html">Blog</a></li>
+                                <li><a href="#">Blog</a></li>
                                 <li class="divider"></li>
                                 <li><a href="#">Twitter</a></li>
                                 <li><a href="#">Facebook</a></li>
@@ -51,34 +53,47 @@
             </div>
         </nav>
     </header>
-    <section class="main">
+    <section class="blogpost">
         <div class="container">
-            <div class="row jumbotron">
-                <div class="col-sm-12 col-md-6">
-                    <h2>The Fastest Way to Space</h2>
-                    <p class="lead">Make your way to space in our rocket, elevator or transporter.</p>
-                    <button class="btn btn-lg btn-default">Take the tour</button>
-                    <button class="btn btn-lg btn-primary">Book Tickets Now</button>
-                </div>
-                <div class="col-md-6 visible-md visible-lg">
-                    <img src="img/img-header.jpg"></div>
-            </div>
-            <div class="row text-center featured">
-                <div class="col-sm-12 col-md-4">
-                    <i class="glyphicon glyphicon-briefcase"></i>
-                    <h2>Book Today!</h2>
-                    <p>Even if you're traveling tomorrow, you can still get tickets today. We have a number of conveniently located ports around the globe to service everyone.</p>
+            <div class="row">
+                <div class="post col-md-8">
+                    <h1>Post</h1>
+                    <p>
+                        <p>That's the way I look when I get home late; black and blue. What the devil. Let's have a little bit of fun today. Just think about these things in your mind - then bring them into your world.</p>
 
+                        <p>All you have to do is let your imagination go wild. Just think about these things in your mind and drop em' on canvas. Work on one thing at a time. Don't get carried away - we have plenty of time. This is unplanned it really just happens.</p>
+
+                        <p>If you don't think every day is a good day - try missing a few. You'll see. So often we avoid running water, and running water is a lot of fun. We don't need any guidelines or formats. All we need to do is just let it flow right out of us.</p>
+
+                        <p>Let your heart take you to wherever you want to be. Isn't that fantastic? You can just push a little tree out of your brush like that. We want to use a lot pressure while using no pressure at all. This is the fun part</p>
+
+                        <p>This painting comes right out of your heart. Every time you practice, you learn more. There are no mistakes. You can fix anything that happens.</p>
+
+                        <p>Water's like me. It's laaazy ... Boy, it always looks for the easiest way to do things In your world you have total and absolute power. Son of a gun. You can spend all day playing with mountains. Anything you want to do you can do here.</p>
+
+                        <p>This is the way you take out your flustrations. Let's do that again. Trees grow however makes them happy. Let your heart be your guide. Just make a decision and let it go. Nature is so fantastic, enjoy it. Let it make you happy.</p>
+                    </p>
                 </div>
-                <div class="col-sm-12 col-md-4">
-                    <i class="glyphicon glyphicon-random"></i>
-                    <h2>Go Anywhere</h2>
-                    <p>If you need to get to space today, why not try out a transporter? Despite the claims, there are have been no deaths in the last 6 weeks!</p>
-                </div>
-                <div class="col-sm-12 col-md-4">
-                    <i class="glyphicon glyphicon-send"></i>
-                    <h2>RocketBus&reg;</h2>
-                    <p>For cheapest fares, catch the next RocketBus® to the stars. Cheaper on your wallet, and easiest way to make friends.</p>
+                <div class="col-md-3 col-md-offset-1 about">
+                    <h3>About</h3>
+                    <p><i class="fa fa-rocket pull-right"></i> Make your way to space in our rocket, elevator or transporter.</p>
+                    <button class="btn btn-sm btn-default">Take the tour</button>
+
+                    <h3>Archives</h3>
+                    <ul class="list-unstyled">
+                        <li><a href="#">January 2214</a></li>
+                        <li><a href="#">December 2213</a></li>
+                        <li><a href="#">November 2213</a></li>
+                        <li><a href="#">October 2213</a></li>
+                        <li><a href="#">September 2213</a></li>
+                        <li><a href="#">August 2213</a></li>
+                        <li><a href="#">July 2213</a></li>
+                        <li><a href="#">June 2213</a></li>
+                        <li><a href="#">May 2213 </a></li>
+                        <li><a href="#">April 2213</a></li>
+                    </ul>
+                    <h3>Subscribe</h3>
+                    <p>Want to stay up to date with our blog? Subscribe now to get the latest posts beamed directly into your brain.</p>
                 </div>
             </div>
         </div>
@@ -108,7 +123,7 @@
                     <ul class="list-unstyled">
                         <li><a href="#">About</a></li>
                         <li><a href="#">Contact Us</a></li>
-                        <li><a href="blogpost.html">Blog</a></li>
+                        <li><a href="#">Blog</a></li>
                         <li><a href="#">Twitter</a></li>
                         <li><a href="#">Facebook</a></li>
                     </ul>
