--- a/blogpost.html
+++ b/blogpost.html
@@ -57,8 +57,7 @@
         <div class="container">
             <div class="row">
                 <div class="post col-md-8">
-                    <h1>Post</h1>
-                    <p>
+                    <h1>Absolute power</h1>
                         <p>That's the way I look when I get home late; black and blue. What the devil. Let's have a little bit of fun today. Just think about these things in your mind - then bring them into your world.</p>
 
                         <p>All you have to do is let your imagination go wild. Just think about these things in your mind and drop em' on canvas. Work on one thing at a time. Don't get carried away - we have plenty of time. This is unplanned it really just happens.</p>
@@ -72,7 +71,7 @@
                         <p>Water's like me. It's laaazy ... Boy, it always looks for the easiest way to do things In your world you have total and absolute power. Son of a gun. You can spend all day playing with mountains. Anything you want to do you can do here.</p>
 
                         <p>This is the way you take out your flustrations. Let's do that again. Trees grow however makes them happy. Let your heart be your guide. Just make a decision and let it go. Nature is so fantastic, enjoy it. Let it make you happy.</p>
-                    </p>
+
                 </div>
                 <div class="col-md-3 col-md-offset-1 about">
                     <h3>About</h3>
