--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <ul class="list-unstyled">
                         <li><a href="#"><i class="glyphicon glyphicon-globe"></i> Orlando, FL</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-phone"></i> 1-555-blast-off</a></li>
-                        <li><a href="mailto:mails4ipiyush@gmail.com"><i class="glyphicon glyphicon-envelope"></i> piyush@gmail.com</a></li>
+                        <li><a href="mailto:mails4ipiyush@gmail.com"><i class="glyphicon glyphicon-envelope"></i> Piyush Ravi</a></li>
                         <li></li>
                     </ul>
                     <p>Intergalactic Travel &copy; 2216</p>
